# learning_projects_repo_jp

ai_augumented_code_review/: aa.txt  ai_review.py  angular.json  package-lock.json
ai_augumented_code_review/src/: main.ts  styles.css
assisted-mcp_server_dts/: README.md  package-lock.json  package.json
assisted-mcp_server_dts/.claude/: settings.local.json
assisted-mcp_server_dts/data/: bugs.json
assisted-mcp_server_dts/src/: index.js
assisted_basic_mvn_project/: Sample.txt  pom.xml
assisted_basic_python_project/: .coverage  README.md  factorial.py  main.py  palindrome.py  pyproject.toml
assisted_basic_python_project/tests/: test_factorial.py  test_palindrome.py
assisted_workflow/: .gitignore  mcp_create_defect.mjs  notes.txt  pom.xml  report_test_failure.mjs  tmp_file_bug_defect.mjs  tmp_mcp_submit_and_list.mjs
assisted_workflow/.github/: copilot-instructions.md  copilot-tools.json
assisted_workflow/data/: tododb.mv.db
expense-tracker-feature-functional-integration-testcases/: notes.txt  pom.xml
expense-tracker-feature-functional-integration-testcases/.github/: copilot-instructions.md
expense-tracker-performance-testing/: .coverage-agent-config.xml  .gitignore  AGENTS.md  COVERAGE_REPORT.md  TEST-COVERAGE-GENERATION-QUICKSTART.md  TEST-COVERAGE-GENERATION.skill.md  pom.xml
model_deepeval/: .gitignore  README.md  bedrockllm.py  main.py  pyproject.toml  test_answer_relevance.py
model_rgas_testing/: main.py  pyproject.toml  rag007x.py  rag009.py
project10-hackathon-sample/: README.md  angular.json  package-lock.json  package.json  spec.md
(+133 files in other folders)
