[project]
name = "model-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.29",
    "faiss-cpu>=1.14.3",
    "google-cloud-aiplatform>=1.157.0",
    "langchain>=1.3.9",
    "langchain-aws>=1.5.1",
    "langchain-community>=0.4.2",
    "ragas>=0.4.3",
]
